tests/NormalTests/paczka1/small_fuzzy/14104271.err
Error in line 1: Pfwf S490 37,1
Error in line 8: ?A;04
